--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       const diff = targetDate - now;
       const days = Math.floor(diff / (1000 * 60 * 60 * 24));
 
-      titleLine.innerHTML = `<strong>🌿 ${title}まで</strong>`;
-      countdown.textContent = `あと ${days}日`;
+      titleLine.innerHTML = `<span class="label">${title}まで</span>`;
+      countdown.innerHTML = `<span class="number">${days}</span><span class="label">日間</span>`;
     }
 
     setInterval(updateCountdown, 1000);
@@ -73,36 +73,33 @@
   <style>
     body {
       font-family: 'M PLUS Rounded 1c', sans-serif;
-      background-color: #f0fdf5;
-      color: #3e7d60;
+      background-color: #f5fdf8;
       text-align: center;
       padding: 50px 20px;
     }
 
     #titleLine {
       font-size: 24px;
-      font-weight: bold;
       margin-bottom: 10px;
-      animation: fadeIn 1.2s ease-in-out;
     }
 
     #countdown {
-      font-size: 40px;
+      font-size: 36px;
+      margin-top: 5px;
+    }
+
+    .label {
+      color: #444; /* 濃いグレー */
+    }
+
+    .number {
+      color: #3e7d60; /* アクセントグリーン */
       font-weight: bold;
-      color: #4fa57e;
-      animation: floatText 3s ease-in-out infinite;
-    }
-
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(-10px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes floatText {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
+      font-size: 40px;
+      margin: 0 6px;
     }
   </style>
 </body>
+
 
 </html>
