--- a/generator.html
+++ b/generator.html
@@ -62,7 +62,7 @@
   
 </head>
 <body>
-  <h1>🎀 カウントダウンURLを作ろう</h1>
+  <h1>カウントダウンURLを作ろう</h1>
   <input type="date" id="dateInput" />
   <input type="text" id="titleInput" placeholder="タイトル（例：試験まで）" />
   <br />
