--- a/generator.html
+++ b/generator.html
@@ -78,7 +78,7 @@
     function generateURL() {
       const date = document.getElementById("dateInput").value;
       const title = encodeURIComponent(document.getElementById("titleInput").value);
-      const baseUrl = "https://your-project-name.vercel.app"; // ← あなたのURLに変更！
+      const baseUrl = "https://counter-widget-rouge.vercel.app.vercel.app"; // ← あなたのURLに変更！
 
       if (!date) {
         document.getElementById("output").style.display = "block";
