--- a/index.html
+++ b/index.html
@@ -7,38 +7,34 @@
   <style>
     body {
       font-family: 'M PLUS Rounded 1c', sans-serif;
-      background-color: #f5fdf8; /* やわらかいミントグリーン背景 */
-      color: #333;
+      background-color: #f5fdf8;
       text-align: center;
-      padding: 40px;
+      padding: 50px 20px;
     }
-  
-    h1 {
-      font-size: 28px;
-      color: #3e7d60; /* アクセントグリーン */
-      margin-bottom: 20px;
-      animation: fadeIn 1s ease-in-out;
-    }
-  
-    #countdown {
-      font-size: 48px;
+
+    #titleLine {
+      font-size: 24px;
       font-weight: bold;
-      color: #3e7d60; /* 同じアクセントカラーで統一感 */
-      margin-top: 20px;
-      animation: floatText 3s ease-in-out infinite;
+      color: #444; /* 濃いグレー */
+      margin-bottom: 10px;
     }
-  
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(-10px); }
-      100% { opacity: 1; transform: translateY(0); }
+
+    #countdown {
+      font-size: 36px;
+      margin-top: 5px;
     }
-  
-    @keyframes floatText {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
+
+    .label {
+      color: #444;
+    }
+
+    .number {
+      color: #3e7d60; /* アクセントグリーン */
+      font-weight: bold;
+      font-size: 40px;
+      margin: 0 6px;
     }
   </style>
-  
 </head>
 <body>
   <div id="container">
@@ -62,47 +58,12 @@
       const diff = targetDate - now;
       const days = Math.floor(diff / (1000 * 60 * 60 * 24));
 
-      titleLine.innerHTML = `<strong>🌿 ${title}まで</strong>`;
-      countdown.textContent = `あと ${days}日`;
+      titleLine.innerHTML = `<span class="label">${title}まで</span>`;
+      countdown.innerHTML = `<span class="number">${days}</span><span class="label">日間</span>`;
     }
 
     setInterval(updateCountdown, 1000);
     updateCountdown();
   </script>
-
-  <style>
-    body {
-      font-family: 'M PLUS Rounded 1c', sans-serif;
-      background-color: #f0fdf5;
-      color: #3e7d60;
-      text-align: center;
-      padding: 50px 20px;
-    }
-
-    #titleLine {
-      font-size: 24px;
-      font-weight: bold;
-      margin-bottom: 10px;
-      animation: fadeIn 1.2s ease-in-out;
-    }
-
-    #countdown {
-      font-size: 40px;
-      font-weight: bold;
-      color: #4fa57e;
-      animation: floatText 3s ease-in-out infinite;
-    }
-
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(-10px); }
-      100% { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes floatText {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-5px); }
-    }
-  </style>
 </body>
-
 </html>
