--- a/index.html
+++ b/index.html
@@ -5,41 +5,48 @@
   <title>カウントダウン</title>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --accent: #3e7d60;
+      --gray: #444;
+      --bg: #ffffff;
+    }
+
     body {
       font-family: 'M PLUS Rounded 1c', sans-serif;
-      background-color: #f5fdf8;
+      background-color: var(--bg);
       text-align: center;
-      padding: 50px 20px;
+      padding: 40px 20px;
+      color: var(--gray);
+    }
+
+    #container {
+      max-width: 320px;
+      margin: 0 auto;
+      padding: 30px 20px;
+      border-radius: 16px;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.06);
+      border: 1px solid #e0eee5;
     }
 
     #titleLine {
-      font-size: 24px;
-      font-weight: bold;
-      color: #444; /* 濃いグレー */
-      margin-bottom: 10px;
-    }
-
-    .title {
-      color: #3e7d60; /* アクセントグリーン */
-      font-weight: bold;
-      font-size: 24px;
-      margin: 0 6px;
+      font-size: 20px;
+      font-weight: 500;
+      margin-bottom: 12px;
+      color: var(--gray);
     }
 
     #countdown {
       font-size: 36px;
-      margin-top: 5px;
-    }
-
-    .label {
-      color: #444;
     }
 
     .number {
-      color: #3e7d60; /* アクセントグリーン */
+      color: var(--accent);
       font-weight: bold;
       font-size: 40px;
-      margin: 0 6px;
+    }
+
+    .label {
+      color: var(--gray);
     }
   </style>
 </head>
@@ -65,8 +72,8 @@
       const diff = targetDate - now;
       const days = Math.floor(diff / (1000 * 60 * 60 * 24));
 
-      titleLine.innerHTML = `<span title="number">${title}</span><span class="label">まで</span>`;
-      countdown.innerHTML = `<span class="label">あと</span><span class="number">${days}</span><span class="label">日</span>`;
+      titleLine.innerHTML = `${title}まで`;
+      countdown.innerHTML = `<span class="number">${days}</span><span class="label">日間</span>`;
     }
 
     setInterval(updateCountdown, 1000);
