--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     .label {
       color: var(--gray);
     }
+
+    .congrats {
+      font-size: 28px;
+      color: var(--accent);
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -72,8 +78,13 @@
       const diff = targetDate - now;
       const days = Math.floor(diff / (1000 * 60 * 60 * 24));
 
-      titleLine.innerHTML = `${title}まで`;
-      countdown.innerHTML = `<span class="number">${days}</span><span class="label">日間</span>`;
+      if (days <= 0) {
+        titleLine.textContent = title;
+        countdown.innerHTML = `<div class="congrats">🎉 おめでとう！</div>`;
+      } else {
+        titleLine.innerHTML = `${title}まで`;
+        countdown.innerHTML = `<span class="label">あと</span><span class="number">${days}</span><span class="label">日</span>`;
+      }
     }
 
     setInterval(updateCountdown, 1000);
